// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LineChart  1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <canvas
      class="chartjs-render-monitor"
      height="0"
      style="display: block;"
      width="0"
    />
  </div>
</DocumentFragment>
`;

exports[`LineChart  2`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <canvas
      class="chartjs-render-monitor"
      height="0"
      style="display: block;"
      width="0"
    />
  </div>
</DocumentFragment>
`;

exports[`LineChart  3`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <canvas
      class="chartjs-render-monitor"
      height="0"
      style="display: block;"
      width="0"
    />
  </div>
</DocumentFragment>
`;

exports[`LineChart  4`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <canvas
      class="chartjs-render-monitor"
      height="0"
      style="display: block;"
      width="0"
    />
  </div>
</DocumentFragment>
`;

exports[`LineChart  5`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <canvas
      class="chartjs-render-monitor"
      height="0"
      style="display: block;"
      width="0"
    />
  </div>
</DocumentFragment>
`;

exports[`LineChart  6`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <canvas
      class="chartjs-render-monitor"
      height="0"
      style="display: block;"
      width="0"
    />
  </div>
</DocumentFragment>
`;

exports[`LineChart  7`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <canvas
      class="chartjs-render-monitor"
      height="0"
      style="display: block;"
      width="0"
    />
  </div>
</DocumentFragment>
`;

exports[`LineChart  8`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dvrejE"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dYebPD"
      >
        <span
          class="StyledText-sc-1sadyjn-0 DkZvS"
        >
          Point style : "circle"
        </span>
        <canvas
          class="chartjs-render-monitor"
          height="0"
          style="display: block;"
          width="0"
        />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kDNLiy"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 dYebPD"
      >
        <span
          class="StyledText-sc-1sadyjn-0 DkZvS"
        >
          Point style : "triangle"
        </span>
        <canvas
          class="chartjs-render-monitor"
          height="0"
          style="display: block;"
          width="0"
        />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kDNLiy"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 dYebPD"
      >
        <span
          class="StyledText-sc-1sadyjn-0 DkZvS"
        >
          Point style : "rect"
        </span>
        <canvas
          class="chartjs-render-monitor"
          height="0"
          style="display: block;"
          width="0"
        />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kDNLiy"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 dYebPD"
      >
        <span
          class="StyledText-sc-1sadyjn-0 DkZvS"
        >
          Point style : "rectRounded"
        </span>
        <canvas
          class="chartjs-render-monitor"
          height="0"
          style="display: block;"
          width="0"
        />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kDNLiy"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 dYebPD"
      >
        <span
          class="StyledText-sc-1sadyjn-0 DkZvS"
        >
          Point style : "rectRot"
        </span>
        <canvas
          class="chartjs-render-monitor"
          height="0"
          style="display: block;"
          width="0"
        />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kDNLiy"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 dYebPD"
      >
        <span
          class="StyledText-sc-1sadyjn-0 DkZvS"
        >
          Point style : "cross"
        </span>
        <canvas
          class="chartjs-render-monitor"
          height="0"
          style="display: block;"
          width="0"
        />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kDNLiy"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 dYebPD"
      >
        <span
          class="StyledText-sc-1sadyjn-0 DkZvS"
        >
          Point style : "crossRot"
        </span>
        <canvas
          class="chartjs-render-monitor"
          height="0"
          style="display: block;"
          width="0"
        />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kDNLiy"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 dYebPD"
      >
        <span
          class="StyledText-sc-1sadyjn-0 DkZvS"
        >
          Point style : "star"
        </span>
        <canvas
          class="chartjs-render-monitor"
          height="0"
          style="display: block;"
          width="0"
        />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kDNLiy"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 dYebPD"
      >
        <span
          class="StyledText-sc-1sadyjn-0 DkZvS"
        >
          Point style : "line"
        </span>
        <canvas
          class="chartjs-render-monitor"
          height="0"
          style="display: block;"
          width="0"
        />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kDNLiy"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 dYebPD"
      >
        <span
          class="StyledText-sc-1sadyjn-0 DkZvS"
        >
          Point style : "dash"
        </span>
        <canvas
          class="chartjs-render-monitor"
          height="0"
          style="display: block;"
          width="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LineChart  9`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <canvas
      class="chartjs-render-monitor"
      height="0"
      style="display: block;"
      width="0"
    />
  </div>
</DocumentFragment>
`;

exports[`LineChart  10`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dvrejE"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dYebPD"
      >
        <span
          class="StyledText-sc-1sadyjn-0 DkZvS"
        >
          Line fill=false
        </span>
        <canvas
          class="chartjs-render-monitor"
          height="0"
          style="display: block;"
          width="0"
        />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kDNLiy"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 dYebPD"
      >
        <span
          class="StyledText-sc-1sadyjn-0 DkZvS"
        >
          Line fill=origin
        </span>
        <canvas
          class="chartjs-render-monitor"
          height="0"
          style="display: block;"
          width="0"
        />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kDNLiy"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 dYebPD"
      >
        <span
          class="StyledText-sc-1sadyjn-0 DkZvS"
        >
          Line fill=start
        </span>
        <canvas
          class="chartjs-render-monitor"
          height="0"
          style="display: block;"
          width="0"
        />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kDNLiy"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 dYebPD"
      >
        <span
          class="StyledText-sc-1sadyjn-0 DkZvS"
        >
          Line fill=end
        </span>
        <canvas
          class="chartjs-render-monitor"
          height="0"
          style="display: block;"
          width="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LineChart  11`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <canvas
      class="chartjs-render-monitor"
      height="0"
      style="display: block;"
      width="0"
    />
  </div>
</DocumentFragment>
`;

exports[`LineChart  12`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <canvas
      class="chartjs-render-monitor"
      height="0"
      style="display: block;"
      width="0"
    />
  </div>
</DocumentFragment>
`;

exports[`LineChart  13`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <canvas
      class="chartjs-render-monitor"
      height="0"
      style="display: block;"
      width="0"
    />
  </div>
</DocumentFragment>
`;

exports[`LineChart  14`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <canvas
      class="chartjs-render-monitor"
      height="0"
      style="display: block;"
      width="0"
    />
  </div>
</DocumentFragment>
`;

exports[`LineChart  15`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <canvas
      class="chartjs-render-monitor"
      height="0"
      style="display: block;"
      width="0"
    />
  </div>
</DocumentFragment>
`;

exports[`LineChart  16`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <canvas
      class="chartjs-render-monitor"
      height="0"
      style="display: block;"
      width="0"
    />
  </div>
</DocumentFragment>
`;

exports[`LineChart  17`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <canvas
      class="chartjs-render-monitor"
      height="0"
      style="display: block;"
      width="0"
    />
  </div>
</DocumentFragment>
`;
